examples/ex3/test_cases/failing/check11_method_is_called_with_fewer_args.java
class Main {
    public static void main(String[] a) { 
        System.out.println(3);
    }
}

class Simple {
    public int runFunc(int arg1, int arg2, int arg3) {
        return 0;
    }

    public int func() {
        int bar;

        bar = this.runFunc(0, 2);

        return 0;
    }
}